--- a/Linked LIsts/Linked LIsts/Linked LIsts.vcxproj
+++ b/Linked LIsts/Linked LIsts/Linked LIsts.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="NewLinkedList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
