--- a/Linked LIsts/Linked LIsts/Linked LIsts.vcxproj.filters
+++ b/Linked LIsts/Linked LIsts/Linked LIsts.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="LinkedList.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="NewLinkedList.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
